--- a/force-app/main/default/lwc/productFilter/productFilter.html
+++ b/force-app/main/default/lwc/productFilter/productFilter.html
@@ -17,7 +17,9 @@
                 ></lightning-slider>
             </section>
             <section>
+                <h3></h3>
                 <h1>Category</h1>
+                <h3>Skipping heading level trigger</h3>
                 <template if:true={categories.data}>
                     <template
                         for:each={categories.data.values}
